# pocket-researcher

./: .env.example  .gitignore  EXAMPLE.md  Makefile  README.md  pyproject.toml
images/: gui_animation.xcf
reference/: URL
src/pochet_researcher/: manager.py  prompts.py
src/pochet_researcher/agents/: background_objective_maker_agent.py
src/pocket-researcher/: main.py  manager.py
src/pocket_researcher/: main.py  manager.py  prompts.py  ui.py
src/pocket_researcher/agents/: abstract_maker_agent.py  clear_background_and_objective_agent.py  full_paper_maker_from_objective_agent.py  paper_maker_from_abstract_agent.py
src/pocket_researcher/custom_agents/: __init__.py  background_objective_maker_agent.py  clear_background_and_objective_agent.py  full_paper_maker_from_objective_agent.py
tests/: test_agents.py  test_pytest.py
