[project]
name = "pocket-researcher"
version = "0.1.0"
description = "自律的にリサーチしてくれるエージェントです。"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gradio>=5.23.1",
    "mlflow>=2.21.2",
    "openai-agents>=0.0.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]
